--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 			<a href="#contactos">Contactos</a>
 
+			<a href="cv.html">Curriculum</a>
+
 			<a href="servicios.html">Servicios</a>
 
 		</nav>
@@ -40,27 +42,16 @@
 			<div class="inicio-text">
 				<h3>community manager<span><br>Desarrollador y Diseñador Web</span></h3>
 				<p>Community manager enfocado en ayudar a las empresas a destacar en línea. En desarrollo y diseño web, creo sitios web personalizados y atractivos que combinan funcionalidad y diseño de vanguardia.</p>
-				<!-- <a href="#" class="btn">MAS INFORMACION</a> -->
 			</div>
 		</div>
 		<!-- <div class="image">
-			<img src="/img/galaxy.png" alt="">
+			<img src="/img/android-chrome-512x512.png" alt="">
 		</div> -->
 	</section>
 
 	<section class="acerca_de" id="acerca_de">
 		<h1 class="heading">CONOCIMIENTOS</h1>
 		<div class="columna">
-			
-			<div class="image">
-				<!-- <center><img src="/img/ahorro.png" alt=""></center> -->
-<!-- 			<hr><br>
-				<center class="columna">
-					<embed src="/doc/Certificado-2.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="49%" height="600px" />
-					<embed src="/doc/Certificado-1.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="49%" height="600px" />
-				</center>
-				<hr><br> -->
-			</div>
 			<hr><br>
 			<div class="content">
 				
