--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 					<li>ASP.NET</li>
 					<li>PYTHON</li>
 					<li>REACT</li>
+					<li>DJANGO</li>
 				</ul>
 				
 				<center><div class="bottons">
