--- a/cv.html
+++ b/cv.html
@@ -31,7 +31,7 @@
 					<!-- <h3 class="heading"><span>IMAGENES</span></h3> -->
 						<div class="info">
 							<center>
-							<object data="/doc/CV.pdf" type="application/pdf" width="400px" height="600px">
+							<object data="/doc/Curriculum.pdf" type="application/pdf" width="400px" height="600px">
 								<p>
 								Your browser does not support PDF files.
 								<a href="/doc/cv.pdf">Download the file instead</a>
