--- a/cv.html
+++ b/cv.html
@@ -34,10 +34,10 @@
 							<object data="/doc/Curriculum.pdf" type="application/pdf" width="400px" height="600px">
 								<p>
 								Your browser does not support PDF files.
-								<a href="/doc/cv.pdf">Download the file instead</a>
+								<a href="/doc/Curriculum.pdf">Download the file instead</a>
 								</p>
 							</object>
-							<!-- <object data="/doc/CV.pdf" type="application/pdf" width="400px" height="600px">
+							<!-- <object data="/doc/Curriculum.pdf" type="application/pdf" width="400px" height="600px">
 								<p>
 								Your browser does not support PDF files.
 								<a href="/doc/cv.pdf">Download the file instead</a>
