--- a/index.html
+++ b/index.html
@@ -76,13 +76,19 @@
 				<ul>
 					<li>HTML</li>
 					<li>CSS</li>
-					<li>JAVASCRIPT</li>
+					<li>JavaScript
+						<ul>
+							<li>React</li>
+							<li>ASP.NET</li>
+						</ul>
+					</li>
 					<li>PHP</li>
-					<li>MYSQL</li>
-					<li>ASP.NET</li>
-					<li>PYTHON</li>
-					<li>REACT</li>
-					<li>DJANGO</li>
+					<li>MySQL</li>
+					<li>Python
+						<ul>
+							<li>Django</li>
+						</ul>
+					</li>
 				</ul>
 				
 				<center><div class="bottons">
