--- a/index.html
+++ b/index.html
@@ -90,6 +90,34 @@
 						</ul>
 					</li>
 				</ul>
+
+				<h3><span>PROGRAMACION WEB</span></h3>
+				<ul>
+					<li>Frontend
+						<ul>
+							<li>HTML</li>
+							<li>CSS</li>
+							<li>JavaScript
+								<ul>
+									<li>React</li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+					<li>Backend
+						<ul>
+							<li>PHP</li>
+							<li>MySQL</li>
+							<li>ASP.NET</li>
+							<li>Python
+								<ul>
+									<li>Django</li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+				</ul>
+
 				
 				<center><div class="bottons">
 					<a href="https://wa.me/+18098468085" class="btn"><i class="fa-brands fa-whatsapp"></i>WHATSAPP</a>
