--- a/servicios.html
+++ b/servicios.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+  	<meta name="description" content="Community Manager, Desarrollador y Diseñador Web profesional. Ofrezco servicios de gestión de redes sociales, desarrollo de sitios web personalizados y diseño web creativo para impulsar la presencia en línea de tu negocio. ¡Mejora tu marca digital hoy mismo!">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>NICOLAS CASTILLO CAMACHO</title>
