--- a/cv.html
+++ b/cv.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WLVHKPQ6N2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WLVHKPQ6N2');
+</script>
 	<meta charset="UTF-8">
   	<meta name="description" content="Community Manager, Desarrollador y Diseñador Web profesional. Ofrezco servicios de gestión de redes sociales, desarrollo de sitios web personalizados y diseño web creativo para impulsar la presencia en línea de tu negocio. ¡Mejora tu marca digital hoy mismo!">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
