--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
 			<a href="servicios.html">Servicios</a>
 
+			<a href="http://jvcrii.iconicastill.com/" target="_blank">Acceder a App</a>
+
 		</nav>
 
 	</header>
