--- a/servicios.html
+++ b/servicios.html
@@ -89,24 +89,29 @@
 				<tr>
 					<th>SERVICIO</th>
 					<th>DESCRIPCION</th>
+					<th>TARIFARIO</th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr>
 					<td>Publicaciones en Facebook e Instagram</td>
 					<td>- Creación de contenido estratégico<br>- Aumento de visibilidad online<br>- Conexión con tu audiencia</td>
+					<td>NO DISPONIBLE</td>
 				</tr>
 				<tr>
 					<td>Instalación de cámaras de seguridad</td>
 					<td>- Soluciones de vigilancia confiables<br>- Cámaras de alta calidad<br>- Protección 24/7</td>
+					<td>NO DISPONIBLE</td>
 				</tr>
 				<tr>
 					<td>Diseño gráfico</td>
 					<td>- Diseño personalizado<br>- Refuerzo de identidad visual<br>- Logotipos y material publicitario</td>
+					<td>NO DISPONIBLE</td>
 				</tr>
 				<tr>
 					<td>Aplicaciones web y de gestión</td>
 					<td>- Desarrollo de aplicaciones web<br>- Sistemas de gestión eficientes<br>- Optimización de procesos</td>
+					<td>NO DISPONIBLE</td>
 				</tr>
 					
 				<!-- Agrega más filas según sea necesario -->
