--- a/servicios.html
+++ b/servicios.html
@@ -111,7 +111,7 @@
 				<tr>
 					<td>Aplicaciones web y de gestión</td>
 					<td>- Desarrollo de aplicaciones web<br>- Sistemas de gestión eficientes<br>- Optimización de procesos</td>
-					<td><a href="doc/Tarifario_Servicios_Web_Nicolas_Castillo.pdf">DESCARGAR 21/05/2025</a></td>
+					<td><a href="doc/Tarifario_Servicios_Web_Nicolas_Castillo.pdf" target="_blank">DESCARGAR 21/05/2025</a></td>
 				</tr>
 					
 				<!-- Agrega más filas según sea necesario -->
