--- a/servicios.html
+++ b/servicios.html
@@ -111,6 +111,16 @@
 				<tr>
 					<td>Aplicaciones web y de gestión</td>
 					<td>- Desarrollo de aplicaciones web<br>- Sistemas de gestión eficientes<br>- Optimización de procesos</td>
+					<td>NO DISPONIBLE</td>
+				</tr>
+				<tr>
+					<td>Servicios Web Simples y Rápidos</td>
+					<td>- Landing Page Profesional
+					<br>- Página de Contacto
+					<br>- Sitio Web Básico de 3 Secciones
+					<br>- Sitio “Próximamente” (Coming Soon)
+					<br>- Página de Evento o Invitación
+					<br>- Página de Presentación Personal</td>
 					<td><a href="doc/Tarifario_Servicios_Web_Nicolas_Castillo.pdf" target="_blank">DESCARGAR 21/05/2025</a></td>
 				</tr>
 					
