--- a/servicios.html
+++ b/servicios.html
@@ -114,7 +114,7 @@
 					<td>NO DISPONIBLE</td>
 				</tr>
 				<tr>
-					<td>Servicios Web Simples y Rápidos</td>
+					<td class="servicios">Servicios Web Simples y Rápidos</td>
 					<td>- Landing Page Profesional
 					<br>- Página de Contacto
 					<br>- Sitio Web Básico de 3 Secciones
