--- a/servicios.html
+++ b/servicios.html
@@ -23,6 +23,12 @@
 		i{
 			margin-inline: 1rem;
 		}
+		
+		.table-responsive {
+			overflow-x: auto;
+ 			-webkit-overflow-scrolling: touch;
+		}
+
 	</style>
 	    <style>
 			table {
@@ -84,49 +90,44 @@
 
 		<h3 class="heading">DETALLES</h3>
 
-		<table>
-			<thead>
-				<tr>
-					<th>SERVICIO</th>
-					<th>DESCRIPCION</th>
-					<th>TARIFARIO</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>Publicaciones en Facebook e Instagram</td>
-					<td>- Creación de contenido estratégico<br>- Aumento de visibilidad online<br>- Conexión con tu audiencia</td>
-					<td>NO DISPONIBLE</td>
-				</tr>
-				<tr>
-					<td>Instalación de cámaras de seguridad</td>
-					<td>- Soluciones de vigilancia confiables<br>- Cámaras de alta calidad<br>- Protección 24/7</td>
-					<td>NO DISPONIBLE</td>
-				</tr>
-				<tr>
-					<td>Diseño gráfico</td>
-					<td>- Diseño personalizado<br>- Refuerzo de identidad visual<br>- Logotipos y material publicitario</td>
-					<td>NO DISPONIBLE</td>
-				</tr>
-				<tr>
-					<td>Aplicaciones web y de gestión</td>
-					<td>- Desarrollo de aplicaciones web<br>- Sistemas de gestión eficientes<br>- Optimización de procesos</td>
-					<td>NO DISPONIBLE</td>
-				</tr>
-				<tr>
-					<td class="servicios">Servicios Web Simples y Rápidos</td>
-					<td>- Landing Page Profesional
-					<br>- Página de Contacto
-					<br>- Sitio Web Básico de 3 Secciones
-					<br>- Sitio “Próximamente” (Coming Soon)
-					<br>- Página de Evento o Invitación
-					<br>- Página de Presentación Personal</td>
-					<td><a href="doc/Tarifario_Servicios_Web_Nicolas_Castillo.pdf" target="_blank">DESCARGAR 21/05/2025</a></td>
-				</tr>
-					
-				<!-- Agrega más filas según sea necesario -->
-			</tbody>
-		</table>
+		<div class="table-responsive">
+		  <table>
+		    <thead>
+		      <tr>
+		        <th>SERVICIO</th>
+		        <th>DESCRIPCION</th>
+		        <th>TARIFARIO</th>
+		      </tr>
+		    </thead>
+		    <tbody>
+		      <tr>
+		        <td>Publicaciones en Facebook e Instagram</td>
+		        <td>- Creación de contenido estratégico<br>- Aumento de visibilidad online<br>- Conexión con tu audiencia</td>
+		        <td>NO DISPONIBLE</td>
+		      </tr>
+		      <tr>
+		        <td>Instalación de cámaras de seguridad</td>
+		        <td>- Soluciones de vigilancia confiables<br>- Cámaras de alta calidad<br>- Protección 24/7</td>
+		        <td>NO DISPONIBLE</td>
+		      </tr>
+		      <tr>
+		        <td>Diseño gráfico</td>
+		        <td>- Diseño personalizado<br>- Refuerzo de identidad visual<br>- Logotipos y material publicitario</td>
+		        <td>NO DISPONIBLE</td>
+		      </tr>
+		      <tr>
+		        <td>Aplicaciones web y de gestión</td>
+		        <td>- Desarrollo de aplicaciones web<br>- Sistemas de gestión eficientes<br>- Optimización de procesos</td>
+		        <td>NO DISPONIBLE</td>
+		      </tr>
+		      <tr>
+		        <td class="servicios">Servicios Web Simples y Rápidos</td>
+		        <td>- Landing Page Profesional<br>- Página de Contacto<br>- Sitio Web Básico de 3 Secciones<br>- Sitio “Próximamente” (Coming Soon)<br>- Página de Evento o Invitación<br>- Página de Presentación Personal</td>
+		        <td><a href="doc/Tarifario_Servicios_Web_Nicolas_Castillo.pdf" target="_blank">DESCARGAR 21/05/2025</a></td>
+		      </tr>
+		    </tbody>
+		  </table>
+		</div>
 
 		<div class="columna">
 			<div class="content">
