--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 			<a href="#contactos">Contactos</a>
 
-			<a href="cv.html">Curriculum</a>
+			<!-- <a href="cv.html">Curriculum</a> -->
 
 			<a href="servicios.html">Servicios</a>
 
