--- a/portafolio.html
+++ b/portafolio.html
@@ -38,7 +38,12 @@
         <h1 class="heading">.<span>CV</span></h1>
 			<div class="columna">
 				<div class="content">
-
+					<!-- <h3 class="heading"><span>IMAGENES</span></h3> -->Add commentMore actions
+						<div class="info">
+							<center>
+							<a href="index.html">Inicio</a>
+							</center>
+						</div>
 				</div>
 			</div>
 
