--- a/portafolio.html
+++ b/portafolio.html
@@ -35,13 +35,13 @@
 	</header>
 
 	<section class="acerca_de" id="acerca_de">
-        <h1 class="heading">.<span>CV</span></h1>
+        <h1 class="heading">.<span>Tarifario de Servicios Web</span></h1>
 			<div class="columna">
 				<div class="content">
-					<!-- <h3 class="heading"><span>IMAGENES</span></h3> -->Add commentMore actions
+					<h3 class="heading"><span>Servicios</span></h3>
 						<div class="info">
 							<center>
-							<a href="index.html">Inicio</a>
+							<a href="template1/index.html">Landing Page Profesional</a>
 							</center>
 						</div>
 				</div>
