--- a/portafolio.html
+++ b/portafolio.html
@@ -35,7 +35,7 @@
 	</header>
 
 	<section class="acerca_de" id="acerca_de">
-        <h1 class="heading">.<span>Tarifario de Servicios Web</span></h1>
+        <h1 class="heading"><span>Tarifario de Servicios Web</span></h1>
 			<div class="columna">
 				<div class="content">
 					<h3 class="heading"><span>Servicios</span></h3>
