--- a/portafolio.html
+++ b/portafolio.html
@@ -41,7 +41,7 @@
 					<h3 class="heading"><span>Servicios</span></h3>
 						<div class="info">
 							<center>
-							<a href="template1/index.html">Landing Page Profesional</a>
+							<a href="#">PROXIMAMENTE</a>
 							</center>
 						</div>
 				</div>
