--- a/portafolio.html
+++ b/portafolio.html
@@ -35,10 +35,10 @@
 	</header>
 
 	<section class="acerca_de" id="acerca_de">
-        <h1 class="heading"><span>Tarifario de Servicios Web</span></h1>
+        <h1 class="heading"><span>PORTAFOLIO, PAGINAS WEB, OPCIONES</span></h1>
 			<div class="columna">
 				<div class="content">
-					<h3 class="heading"><span>Servicios</span></h3>
+					<h3 class="heading"><span>PERSONALIZABLES 100%</span></h3>
 						<div class="info">
 							<center>
 							<a href="#">PROXIMAMENTE</a>
