--- a/portafolio.html
+++ b/portafolio.html
@@ -41,7 +41,13 @@
 					<h3 class="heading"><span>PERSONALIZABLES 100%</span></h3>
 						<div class="info">
 							<center>
-							<a href="#">PROXIMAMENTE</a>
+							<a href="template1">PROXIMAMENTE</a>
+							<a href="template2">PROXIMAMENTE</a>
+							<a href="template3">PROXIMAMENTE</a>
+							<a href="template4">PROXIMAMENTE</a>
+							<a href="template5">PROXIMAMENTE</a>
+							<a href="template6">PROXIMAMENTE</a>
+							<a href="template7">PROXIMAMENTE</a>
 							</center>
 						</div>
 				</div>
