--- a/template1/index.html
+++ b/template1/index.html
@@ -12,7 +12,7 @@
 <body>
 	<header>
 		<a href="#" class="logo"><span>ICONICASTILL<!--
-		 --></span>.template</a>
+		 --></span>.template1</a>
 
 		<input type="checkbox" id="menu-bar">
 		<label for="menu-bar" class="fa fa-bars"></label>
