--- a/template6/index.html
+++ b/template6/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 	<header>
-		<a href="#" class="logo"><span>TAMA<!--
-		 --></span>.ctv</a>
+		<a href="#" class="logo"><span>ICONICASTILL<!--
+		 --></span>.template6</a>
 
 		<input type="checkbox" id="menu-bar">
 		<label for="menu-bar" class="fa fa-bars"></label>
