--- a/template1/index.html
+++ b/template1/index.html
@@ -17,13 +17,13 @@
 		<input type="checkbox" id="menu-bar">
 		<label for="menu-bar" class="fa fa-bars"></label>
 		<nav class="navbar">
+			<a href="../index.html">inicio</a>
 			<a href="#inicio">inicio</a>
 			<a href="#detalles">detalles</a>
 			<a href="#acerca_de">acerca de</a>
 			<a href="#opiniones">opiniones</a>
 			<a href="#precios">precios</a>
 			<a href="#contactos">contactos</a>
-			<!-- <a href="/login.html">ingresar</a> -->
 		</nav>
 
 	</header>
