--- a/template1/index.html
+++ b/template1/index.html
@@ -17,7 +17,7 @@
 		<input type="checkbox" id="menu-bar">
 		<label for="menu-bar" class="fa fa-bars"></label>
 		<nav class="navbar">
-			<a href="../index.html">regresar</a>
+			<a href="../portafolio.html">regresar</a>
 			<a href="#inicio">inicio</a>
 			<a href="#detalles">detalles</a>
 			<a href="#acerca_de">acerca de</a>
