--- a/portafolio.html
+++ b/portafolio.html
@@ -40,15 +40,15 @@
 				<div class="content">
 					<h3 class="heading"><span>PERSONALIZABLES 100%</span></h3>
 						<div class="info">
-							<center>
-							<a href="template1">PROXIMAMENTE</a>
-							<a href="template2">PROXIMAMENTE</a>
-							<a href="template3">PROXIMAMENTE</a>
-							<a href="template4">PROXIMAMENTE</a>
-							<a href="template5">PROXIMAMENTE</a>
-							<a href="template6">PROXIMAMENTE</a>
-							<a href="template7">PROXIMAMENTE</a>
-							</center>
+				<ul>
+					<li><a href="template1">PROXIMAMENTE</a></li>
+					<li><a href="template2">PROXIMAMENTE</a></li>
+					<li><a href="template3">PROXIMAMENTE</a></li>
+					<li><a href="template4">PROXIMAMENTE</a></li>
+					<li><a href="template5">PROXIMAMENTE</a></li>
+					<li><a href="template6">PROXIMAMENTE</a></li>
+					<li><a href="template7">PROXIMAMENTE</a></li>
+				</ul>
 						</div>
 				</div>
 			</div>
