--- a/portafolio.html
+++ b/portafolio.html
@@ -41,13 +41,13 @@
 					<h3 class="heading"><span>PERSONALIZABLES 100%</span></h3>
 						<div class="info">
 				<ul>
-					<li><a href="template1">PROXIMAMENTE</a></li>
-					<li><a href="template2">PROXIMAMENTE</a></li>
-					<li><a href="template3">PROXIMAMENTE</a></li>
-					<li><a href="template4">PROXIMAMENTE</a></li>
-					<li><a href="template5">PROXIMAMENTE</a></li>
-					<li><a href="template6">PROXIMAMENTE</a></li>
-					<li><a href="template7">PROXIMAMENTE</a></li>
+					<li><a href="template1">Landing Page Profesional</a></li>
+					<li><a href="template2">Página de Contacto con Formulario</a></li>
+					<li><a href="template3">Sitio Básico (Inicio, Sobre, Contacto)</a></li>
+					<li><a href="template4">Página de Portafolio</a></li>
+					<li><a href="template5">Página 'Próximamente'</a></li>
+					<li><a href="template6">Página de Evento o Invitación</a></li>
+					<li><a href="template7">Presentación Personal </a></li>
 					<li><a href="http://jvcrii.iconicastill.com/" target="_blank">Acceder a App</a></li>
 					<li><a href="https://app.iconicastill.com/" target="_blank">Acceder a App</a></li>
 				</ul>
