--- a/portafolio.html
+++ b/portafolio.html
@@ -48,8 +48,8 @@
 					<li><a href="template5">Página 'Próximamente'</a></li>
 					<li><a href="template6">Página de Evento o Invitación</a></li>
 					<li><a href="template7">Presentación Personal </a></li>
-					<li><a href="http://jvcrii.iconicastill.com/" target="_blank">Acceder a App</a></li>
-					<li><a href="https://app.iconicastill.com/" target="_blank">Acceder a App</a></li>
+					<li><a href="http://jvcrii.iconicastill.com/" target="_blank">Acceder a App (PHP)</a></li>
+					<li><a href="https://app.iconicastill.com/" target="_blank">Acceder a App (DJANGO)</a></li>
 				</ul>
 						</div>
 				</div>
