--- a/index.html
+++ b/index.html
@@ -40,8 +40,6 @@
 
 			<a href="#contactos">Contactos</a>
 
-			<!-- <a href="cv.html">Curriculum</a> -->
-
 			<a href="servicios.html">Servicios</a>
 
 			<a href="portafolio.html">Portafolio</a>
@@ -77,9 +75,9 @@
 				<h3>HERRAMIENTAS/SOFWARES DE DISEÑO</h3>
 				<ul>
 					<li>ADOBE PHOTOSHOP</li>
-					<li>ADOBE ILUSTRATOR</li>
+					<!--<li>ADOBE ILUSTRATOR</li>
 					<li>ADOBE ANIMATE</li>
-					<li>ADOBE AFTER EFECT</li>
+					<li>ADOBE AFTER EFECT</li>-->
 					<li>CANVAS</li>
 					<li>GIMP</li>
 				</ul>
@@ -100,6 +98,9 @@
 					<li>Backend
 						<ul>
 							<li>PHP</li>
+								<ul>
+									<li>Laravel</li>
+								</ul>
 							<li>MySQL</li>
 							<li>ASP.NET</li>
 							<li>Python
@@ -202,4 +203,5 @@
 	</noscript>
 </body>
 </html>
+
 
