--- a/index.html
+++ b/index.html
@@ -158,7 +158,21 @@
     </div>
     <input type="submit" class="btn" value="ENVIAR">
 </form>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        // Reemplaza esta URL con la de tu app de Django en Render
+        const tokenUrl = 'https://tu-app-de-django.onrender.com/get-csrf-token/';
 
+        fetch(tokenUrl)
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('csrf_token_field').value = data.csrf_token;
+            })
+            .catch(error => {
+                console.error('Error al obtener el token CSRF:', error);
+            });
+    });
+</script>
 	</section>
 	<div class="footer">
 		<div class="caja-contenedor">
@@ -204,6 +218,7 @@
 	</noscript>
 </body>
 </html>
+
 
 
 
