--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         // Reemplaza esta URL con la de tu app de Django en Render
-        const tokenUrl = 'https://tu-app-de-django.onrender.com/get-csrf-token/';
+        const tokenUrl = 'https://app.iconicastill.com/get-csrf-token/';
 
         fetch(tokenUrl)
             .then(response => response.json())
@@ -218,6 +218,7 @@
 	</noscript>
 </body>
 </html>
+
 
 
 
