--- a/index.html
+++ b/index.html
@@ -160,14 +160,13 @@
 </form>
 
 <script>
-// Función para obtener cookies
 function getCookie(name) {
   let cookieValue = null;
   if (document.cookie && document.cookie !== '') {
     const cookies = document.cookie.split(';');
-    for (let i = 0; i < cookies.length; i++) {
-      const cookie = cookies[i].trim();
-      if (cookie.substring(0, name.length + 1) === (name + '=')) {
+    for (let cookie of cookies) {
+      cookie = cookie.trim();
+      if (cookie.startsWith(name + '=')) {
         cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
         break;
       }
@@ -176,13 +175,13 @@ function getCookie(name) {
   return cookieValue;
 }
 
-// Obtener el token CSRF y guardarlo como cookie
+// Obtener el token CSRF (no sobrescribas la cookie manualmente)
 fetch('https://app.iconicastill.com/get-csrf-token/', {
   credentials: 'include'
 })
 .then(response => response.json())
 .then(data => {
-  document.cookie = `csrftoken=${data.csrf_token}; path=/; secure; samesite=None`;
+  console.log('Token CSRF obtenido:', data.csrf_token);
 })
 .catch(error => console.error('Error al obtener el token CSRF:', error));
 
@@ -192,6 +191,12 @@ document.addEventListener("DOMContentLoaded", function() {
 
   form.addEventListener('submit', function(e) {
     e.preventDefault();
+
+    const csrfToken = getCookie('csrftoken');
+    if (!csrfToken) {
+      alert('No se pudo obtener el token CSRF. Intenta recargar la página.');
+      return;
+    }
 
     const formData = {
       nombre: form.nombre.value,
@@ -205,7 +210,7 @@ document.addEventListener("DOMContentLoaded", function() {
       credentials: 'include',
       headers: {
         'Content-Type': 'application/json',
-        'X-CSRFToken': getCookie('csrftoken')
+        'X-CSRFToken': csrfToken
       },
       body: JSON.stringify(formData)
     })
@@ -270,6 +275,7 @@ document.addEventListener("DOMContentLoaded", function() {
 	</noscript>
 </body>
 </html>
+
 
 
 
