--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
 
 	</div>
 	<section class="contactos" id="contactos">
-
+<h3>FORMULARIO DE CONTACTO</h3>
+<p>Deja tu mensaje nos comunicaremos contigo cuanto antes</p>
 		<div class="image">
 			<center><img src="/img/form_img.png" alt=""></center>
 		</div>
@@ -275,6 +276,7 @@ document.addEventListener("DOMContentLoaded", function() {
 	</noscript>
 </body>
 </html>
+
 
 
 
