--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
 
 	</div>
 	<section class="contactos" id="contactos">
-<h3>FORMULARIO DE CONTACTO</h3>
+<h1 class="heading">FORMULARIO DE CONTACTO</h1>
+		<hr>
 <p>Deja tu mensaje nos comunicaremos contigo cuanto antes</p>
 		<div class="image">
 			<center><img src="/img/form_img.png" alt=""></center>
@@ -276,6 +277,7 @@ document.addEventListener("DOMContentLoaded", function() {
 	</noscript>
 </body>
 </html>
+
 
 
 
