--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
 	</div>
 	<section class="contactos" id="contactos">
 <h1 class="heading">FORMULARIO DE CONTACTO</h1>
-		<hr>
-<p>Deja tu mensaje nos comunicaremos contigo cuanto antes</p>
+		
 		<div class="image">
 			<center><img src="/img/form_img.png" alt=""></center>
 		</div>
 		
 <form id="contact-form">
+	<h2>Enviar Mensaje</h2>
   <div class="inputcaja">
     <input type="text" name="nombre" required>
     <label>nombre</label>
@@ -277,6 +277,7 @@ document.addEventListener("DOMContentLoaded", function() {
 	</noscript>
 </body>
 </html>
+
 
 
 
