--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
 
 	</div>
 	<section class="contactos" id="contactos">
-<center><h1 class="heading">FORMULARIO DE CONTACTO</h1></center>
+		
+	<h1 class="heading">FORMULARIO DE CONTACTO</h1>
 		
 		<div class="image">
 			<center><img src="/img/form_img.png" alt=""></center>
@@ -277,6 +278,7 @@ document.addEventListener("DOMContentLoaded", function() {
 	</noscript>
 </body>
 </html>
+
 
 
 
