--- a/portafolio.html
+++ b/portafolio.html
@@ -50,7 +50,7 @@
 					<li><a href="template7">Presentación Personal </a></li>
 					<li><a href="http://jvcrii.iconicastill.com/" target="_blank">Acceder a App (PHP)</a></li>
 					<li><a href="https://app.iconicastill.com/" target="_blank">Acceder a App (DJANGO) - Creación de tareas</a></li>
-					<li><a href="https://app.iconicastill.com/" target="_blank">Acceder a App (DJANGO) - Recepción de mensajes</a></li>
+					<li><a href="https://app.iconicastill.com/mensajes/" target="_blank">Acceder a App (DJANGO) - Recepción de mensajes</a></li>
 				</ul>
 						</div>
 				</div>
