--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <input type="submit" class="btn" value="ENVIAR">
 </form>
 
-<script>
+<!--<script>
 function getCookie(name) {
   let cookieValue = null;
   if (document.cookie && document.cookie !== '') {
@@ -230,8 +230,8 @@ document.addEventListener("DOMContentLoaded", function() {
     });
   });
 });
-</script>
-
+</script>-->
+		
 	</section>
 	<div class="footer">
 		<div class="caja-contenedor">
@@ -277,6 +277,7 @@ document.addEventListener("DOMContentLoaded", function() {
 	</noscript>
 </body>
 </html>
+
 
 
 
